[project]
name = "pyremo"
description = "Data analytics, processing and plotting for regional climate model REMO."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["remo", "cordex"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy < 1.26.3",
    "pooch >= 1.0",
    "setuptools >= 40.4",  # for pkg_resources
    "xarray >= 0.15",
    "py-cordex >= 0.3.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://pyremo.readthedocs.io"
documentation = "https://pyremo.readthedocs.io"
repository = "https://github.com/remo-rcm/pyremo.git"
changelog = "https://pyremo.readthedocs.io/en/latest/whats-new.html"

[project.scripts]
pyremo-analysis = "pyremo.cli:main_analysis"
prsint = "pyremo.cli:prsint"
pradd-vars = "pyremo.cli:add_variables"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4",
    "setuptools_scm_git_archive",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyremo"]

[tool.setuptools_scm]
fallback_version = "999"
version_scheme = "no-guess-dev"

[tool.ruff]
target-version = "py38"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "doc",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
[lint]
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.pytest]
python_files = "test_*.py"
testpaths = ["tests"]

[tool.rstcheck]
report_level = "WARNING"
ignore_roles = [
    "pull",
    "issue",
]
ignore_directives = [
    "ipython",
    "autodata",
    "autosummary",
]
